internal class AnimationStrings
{
    internal static string IsMoving = "IsMoving";
    internal static string IsRunning = "IsRunning";
    internal static string IsGrounded = "IsGrounded";
    internal static string YVelocity = "yVelocity";
    internal static string JumpTrigger = "Jump";
    internal static string IsOnCelling = "IsOnCelling";
    internal static string IsOnWall = "IsOnWall";
    internal static string AttackTrigger = "Attack";
    internal static string CanMove = "canMove";
    internal static string HasTarget = "HasTarget";
    internal static string IsAlive = "IsAlive";
    internal static string HitTrigger = "Hit";
    internal static string LookVelocity = "lookVelocity";
    internal static string AttackCooldown = "AttackCooldown";
}
